main/d96/astgen/.antlr/D96Parser.py
# Generated from g:\sem_212\ppl\assignment\src\main\d96\astgen\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Constructor'", "'Destructor'", "'New'", "'By'", "'Self'", 
                     "';'", "':'", "','", "'.'", "'..'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'==.'", "'+.'", "'::'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOLLIT", "STRLIT", 
                      "BREAK_", "CONTINUE_", "IF_", "ELSEIF_", "ELSE_", 
                      "FOREACH_", "TRUE_", "FALSE_", "ARRAY_", "IN_", "INT_", 
                      "FLOAT_", "BOOL_", "STR_", "RETURN_", "NULL_", "CLASS_", 
                      "VAL_", "VAR_", "CONSTRUCTOR_", "DESTRUCTOR_", "NEW_", 
                      "BY_", "SELF_", "SEMI", "COLON", "COMMA", "DOT", "DOUBLEDOT", 
                      "LB", "RB", "LSB", "RSB", "LCB", "RCB", "ADDOP", "SUBOP", 
                      "MULOP", "DIVOP", "MODOP", "NOTOP", "ANDOP", "OROP", 
                      "EQCMP", "ASNOP", "DIFCMP", "LESCMP", "LEQCMP", "GRECMP", 
                      "GEQCMP", "SEQCMP", "SADDOP", "CSMEM", "ID", "VID", 
                      "COMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classDecl = 1
    RULE_classMem = 2
    RULE_attribute = 3
    RULE_attrBody = 4
    RULE_attrNonInit = 5
    RULE_method = 6
    RULE_normalMet = 7
    RULE_constructor = 8
    RULE_destructor = 9
    RULE_paraList = 10
    RULE_idList = 11
    RULE_scope = 12
    RULE_stmt = 13
    RULE_declStmt = 14
    RULE_declBody = 15
    RULE_declNonInit = 16
    RULE_identifier = 17
    RULE_asnStmt = 18
    RULE_lhs = 19
    RULE_ifStmt = 20
    RULE_elifStmt = 21
    RULE_elseStmt = 22
    RULE_forStmt = 23
    RULE_breakStmt = 24
    RULE_contStmt = 25
    RULE_insMetStmt = 26
    RULE_staMetStmt = 27
    RULE_retStmt = 28
    RULE_expr = 29
    RULE_exprList = 30
    RULE_arrDec = 31
    RULE_vartype = 32
    RULE_arrLit = 33

    ruleNames =  [ "program", "classDecl", "classMem", "attribute", "attrBody", 
                   "attrNonInit", "method", "normalMet", "constructor", 
                   "destructor", "paraList", "idList", "scope", "stmt", 
                   "declStmt", "declBody", "declNonInit", "identifier", 
                   "asnStmt", "lhs", "ifStmt", "elifStmt", "elseStmt", "forStmt", 
                   "breakStmt", "contStmt", "insMetStmt", "staMetStmt", 
                   "retStmt", "expr", "exprList", "arrDec", "vartype", "arrLit" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOLLIT=3
    STRLIT=4
    BREAK_=5
    CONTINUE_=6
    IF_=7
    ELSEIF_=8
    ELSE_=9
    FOREACH_=10
    TRUE_=11
    FALSE_=12
    ARRAY_=13
    IN_=14
    INT_=15
    FLOAT_=16
    BOOL_=17
    STR_=18
    RETURN_=19
    NULL_=20
    CLASS_=21
    VAL_=22
    VAR_=23
    CONSTRUCTOR_=24
    DESTRUCTOR_=25
    NEW_=26
    BY_=27
    SELF_=28
    SEMI=29
    COLON=30
    COMMA=31
    DOT=32
    DOUBLEDOT=33
    LB=34
    RB=35
    LSB=36
    RSB=37
    LCB=38
    RCB=39
    ADDOP=40
    SUBOP=41
    MULOP=42
    DIVOP=43
    MODOP=44
    NOTOP=45
    ANDOP=46
    OROP=47
    EQCMP=48
    ASNOP=49
    DIFCMP=50
    LESCMP=51
    LEQCMP=52
    GRECMP=53
    GEQCMP=54
    SEQCMP=55
    SADDOP=56
    CSMEM=57
    ID=58
    VID=59
    COMMENT=60
    WS=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassDeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.CLASS_:
                self.state = 68
                self.classDecl()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_(self):
            return self.getToken(D96Parser.CLASS_, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def classMem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassMemContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassMemContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_classDecl




    def classDecl(self):

        localctx = D96Parser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(D96Parser.CLASS_)
            self.state = 77
            self.match(D96Parser.ID)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 78
                self.match(D96Parser.COLON)
                self.state = 79
                self.match(D96Parser.ID)


            self.state = 82
            self.match(D96Parser.LCB)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL_) | (1 << D96Parser.VAR_) | (1 << D96Parser.CONSTRUCTOR_) | (1 << D96Parser.DESTRUCTOR_) | (1 << D96Parser.ID) | (1 << D96Parser.VID))) != 0):
                self.state = 83
                self.classMem()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(D96Parser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(D96Parser.MethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classMem




    def classMem(self):

        localctx = D96Parser.ClassMemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classMem)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL_, D96Parser.VAR_]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.attribute()
                pass
            elif token in [D96Parser.CONSTRUCTOR_, D96Parser.DESTRUCTOR_, D96Parser.ID, D96Parser.VID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAR_(self):
            return self.getToken(D96Parser.VAR_, 0)

        def VAL_(self):
            return self.getToken(D96Parser.VAL_, 0)

        def attrBody(self):
            return self.getTypedRuleContext(D96Parser.AttrBodyContext,0)


        def attrNonInit(self):
            return self.getTypedRuleContext(D96Parser.AttrNonInitContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute




    def attribute(self):

        localctx = D96Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL_ or _la==D96Parser.VAR_):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 96
                self.attrBody()
                pass

            elif la_ == 2:
                self.state = 97
                self.attrNonInit()
                pass


            self.state = 100
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(D96Parser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(D96Parser.VartypeContext,0)


        def ASNOP(self):
            return self.getToken(D96Parser.ASNOP, 0)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def attrBody(self):
            return self.getTypedRuleContext(D96Parser.AttrBodyContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrBody




    def attrBody(self):

        localctx = D96Parser.AttrBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attrBody)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.identifier()
                self.state = 103
                self.match(D96Parser.COLON)
                self.state = 104
                self.vartype()
                self.state = 105
                self.match(D96Parser.ASNOP)
                self.state = 106
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.identifier()
                self.state = 109
                self.match(D96Parser.COMMA)
                self.state = 110
                self.attrBody()
                self.state = 111
                self.match(D96Parser.COMMA)
                self.state = 112
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrNonInitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(D96Parser.VartypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_attrNonInit




    def attrNonInit(self):

        localctx = D96Parser.AttrNonInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attrNonInit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.identifier()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 117
                self.match(D96Parser.COMMA)
                self.state = 118
                self.identifier()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(D96Parser.COLON)
            self.state = 125
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normalMet(self):
            return self.getTypedRuleContext(D96Parser.NormalMetContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method




    def method(self):

        localctx = D96Parser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.VID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.normalMet()
                pass
            elif token in [D96Parser.CONSTRUCTOR_]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR_]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NormalMetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def scope(self):
            return self.getTypedRuleContext(D96Parser.ScopeContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def VID(self):
            return self.getToken(D96Parser.VID, 0)

        def paraList(self):
            return self.getTypedRuleContext(D96Parser.ParaListContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_normalMet




    def normalMet(self):

        localctx = D96Parser.NormalMetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_normalMet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.VID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 133
            self.match(D96Parser.LB)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID or _la==D96Parser.VID:
                self.state = 134
                self.paraList()


            self.state = 137
            self.match(D96Parser.RB)
            self.state = 138
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR_(self):
            return self.getToken(D96Parser.CONSTRUCTOR_, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def scope(self):
            return self.getTypedRuleContext(D96Parser.ScopeContext,0)


        def paraList(self):
            return self.getTypedRuleContext(D96Parser.ParaListContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(D96Parser.CONSTRUCTOR_)
            self.state = 141
            self.match(D96Parser.LB)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID or _la==D96Parser.VID:
                self.state = 142
                self.paraList()


            self.state = 145
            self.match(D96Parser.RB)
            self.state = 146
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR_(self):
            return self.getToken(D96Parser.DESTRUCTOR_, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def scope(self):
            return self.getTypedRuleContext(D96Parser.ScopeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor




    def destructor(self):

        localctx = D96Parser.DestructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_destructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(D96Parser.DESTRUCTOR_)
            self.state = 149
            self.match(D96Parser.LB)
            self.state = 150
            self.match(D96Parser.RB)
            self.state = 151
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdListContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdListContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_paraList




    def paraList(self):

        localctx = D96Parser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.idList()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 154
                self.match(D96Parser.SEMI)
                self.state = 155
                self.idList()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(D96Parser.VartypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_idList




    def idList(self):

        localctx = D96Parser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.identifier()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 162
                self.match(D96Parser.COMMA)
                self.state = 163
                self.identifier()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self.match(D96Parser.COLON)
            self.state = 170
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.StmtContext)
            else:
                return self.getTypedRuleContext(D96Parser.StmtContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_scope




    def scope(self):
